force-app/main/default/objects/Filter__c/Filter__c.object-meta.xml
<CustomObject>
    <label>Filter</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>