force-app/main/default/objects/Filter__c/fields/displayText__c.field-meta.xml
<CustomField>
    <fullName>displayText__c</fullName>
    <label>displayText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>