force-app/main/default/objects/Filter__c/fields/fieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>fieldAPIName__c</fullName>
    <label>fieldAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>