force-app/main/default/objects/Filter__c/fields/fieldLabel__c.field-meta.xml
<CustomField>
    <fullName>fieldLabel__c</fullName>
    <label>fieldLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>