force-app/main/default/objects/Filter__c/fields/fieldType__c.field-meta.xml
<CustomField>
    <fullName>fieldType__c</fullName>
    <label>fieldType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>