force-app/main/default/objects/Filter__c/fields/filterString__c.field-meta.xml
<CustomField>
    <fullName>filterString__c</fullName>
    <label>filterString</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>