force-app/main/default/objects/Filter__c/fields/isrelated__c.field-meta.xml
<CustomField>
    <fullName>isrelated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isrelated</label>
    <type>Checkbox</type>
</CustomField>