force-app/main/default/objects/Filter__c/fields/objectName__c.field-meta.xml
<CustomField>
    <fullName>objectName__c</fullName>
    <formula>View__r.objectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>objectName</label>
    <type>Text</type>
</CustomField>