force-app/main/default/objects/Filter__c/fields/operatorLabel__c.field-meta.xml
<CustomField>
    <fullName>operatorLabel__c</fullName>
    <label>operatorLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>