force-app/main/default/objects/Filter__c/fields/operatorSymbol__c.field-meta.xml
<CustomField>
    <fullName>operatorSymbol__c</fullName>
    <label>operatorSymbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>