force-app/main/default/objects/Filter__c/fields/relationshipFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>relationshipFieldAPIName__c</fullName>
    <label>relationshipFieldAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>