force-app/main/default/objects/Filter__c/fields/relObjName__c.field-meta.xml
<CustomField>
    <fullName>relObjName__c</fullName>
    <label>relObjName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>