force-app/main/default/objects/Filter__c/fields/serial__c.field-meta.xml
<CustomField>
    <fullName>serial__c</fullName>
    <label>serial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>