force-app/main/default/objects/Filter__c/fields/valuetoFilter__c.field-meta.xml
<CustomField>
    <fullName>valuetoFilter__c</fullName>
    <label>valuetoFilter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>