force-app/main/default/objects/Filter__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <referenceTo>View__c</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>